--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.daemon=true
